# list-windows-on-mac

./: .editorconfig  .gitignore  README.md  lswin.py  pyproject.toml  requirements-dev.txt  requirements-main.txt  requirements.txt
.github/workflows/: ci.yml  pylint.yml  python-package.yml
scripts/: _utils.sh  lint.sh  smock-run.sh  smock_run.sh  test.sh
tests/: lswin_test.py  test_lswin.py
