[tool.poetry]
name = "list-windows-on-mac"
version = "1.1.0-dev"
description = "List windows info(rect, owner process id, windows id, title) on macOS"
authors = ["Jerry Lee <oldratlee@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pyobjc-framework-Quartz = "^9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
